tests/testdata/ingress-service.yaml
#
# Bitnami Kubernetes Production Runtime - A collection of services that makes it
# easy to run production workloads in Kubernetes.
#
# Copyright 2018 Bitnami
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Service
metadata:
  name: echoheaders
  labels:
    name: echoheaders
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    name: echoheaders
